Potential Leaks - RetainPtr<> over retaining Create'd objects https://bugs.webkit.org/show_bug.cgi?id=65806

Reviewed by Darin Adler.

Fix a possible leak by adopting an allocation instead of retaining it.

Source/WebCore:

* platform/network/mac/NetworkStateNotifierMac.cpp:
(WebCore::NetworkStateNotifier::NetworkStateNotifier):
* plugins/mac/PluginPackageMac.cpp:
(WebCore::stringListFromResourceId):
(WebCore::PluginPackage::fetchInfo):

Source/WebKit/mac:

* WebView/WebView.mm:
(-[WebView previousValidKeyView]):


Canonical link: https://commits.webkit.org/81647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92552 268f45cc-cd09-0410-ab3c-d52691b4dbfc